--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,4 +19,8 @@ body {
     text-align: center;
     align-items: center;
     margin-right: 20px;
+    
 }
+nav ul li a{
+    color:#FFFFFF !important;
+} 
