--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'raleway', sans-serif;
     background-color: #000000;
     color: #FFFFFF;
+    font-family: 'Open Sans', sans-serif;
      }
 
 .barra {
@@ -31,5 +32,5 @@ height:30px;
 }
 .card {
     border-color: gray;
-    border-width: 2px;
+    border-width: 3px;
 }
